tests/paczka1/fuzzy1/85072590.err
Error in line 7: 8HmP6T S776 20,4
Error in line 5: duyYhSUPYrm A609 28,8
Error in line 10: 8HmP6T A484 50,3
Error in line 19: 8HmP6T A318 13,7
Error in line 28: AUQP A609 63,9
